[gd_scene load_steps=9 format=3 uid="uid://davpidau2xuae"]

[ext_resource type="Script" path="res://Prefabs/CharacterController/gun.gd" id="1_57enr"]
[ext_resource type="PackedScene" uid="uid://obeq51nq4hju" path="res://Models/shotgun_placeholder.glb" id="1_fyuur"]
[ext_resource type="Script" path="res://Prefabs/CharacterController/GunStates/get_up.gd" id="3_4138y"]
[ext_resource type="Script" path="res://Prefabs/CharacterController/GunStates/get_down.gd" id="4_ku30f"]

[sub_resource type="Animation" id="Animation_qf2jc"]
resource_name = "GetGun"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShotgunPlaceholder:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShotgunPlaceholder:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.26),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.942548, -2.73133, -1.5048), Vector3(-0.943, -0.316, -1.505)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShotgunPlaceholder:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5708, -0.523599), Vector3(0, 1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_phwdn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShotgunPlaceholder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.942548, -0.31564, -1.5048)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShotgunPlaceholder:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5708, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShotgunPlaceholder:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tmv0s"]
resource_name = "Shoot"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShotgunPlaceholder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.08, 0.1, 0.16, 0.18, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.942548, -0.31564, -1.5048), Vector3(-0.943, -0.316, -1), Vector3(-0.943, -0.316, -0.9), Vector3(-0.943, -0.316, -1), Vector3(-0.943, -0.316, -1.505), Vector3(-0.943, -0.316, -1.6), Vector3(-0.942548, -0.31564, -1.5048)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShotgunPlaceholder:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.08, 0.09, 0.18, 0.19, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.5708, 0), Vector3(0, 1.5708, 0.523599), Vector3(0, 1.5708, 0.610865), Vector3(0, 1.5708, 0.523599), Vector3(0, 1.5708, 0), Vector3(0, 1.5708, -0.0872665), Vector3(0, 1.5708, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cb52p"]
_data = {
"GetGun": SubResource("Animation_qf2jc"),
"RESET": SubResource("Animation_phwdn"),
"Shoot": SubResource("Animation_tmv0s")
}

[node name="Gun" type="Node3D"]
script = ExtResource("1_57enr")
max_ammo_count = 3
shoot_animation = "Shoot"

[node name="ShotgunPlaceholder" parent="." instance=ExtResource("1_fyuur")]
transform = Transform3D(-1.74846e-08, 0, 0.4, 0, 0.4, 0, -0.4, 0, -1.74846e-08, -0.942548, -0.31564, -1.5048)
visible = false

[node name="ShotPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.943524, -0.0502683, -2.44249)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cb52p")
}

[node name="GetUpState" type="Node" parent="."]
script = ExtResource("3_4138y")
animation = "GetGun"

[node name="GetDownState" type="Node" parent="."]
script = ExtResource("4_ku30f")
animation = "GetGun"
